<resources>
    <string name="app_name">TipCalculator</string>


    <string name="amount_bill_hint">Enter Bill</string>
    <string name="amount_tip_percent_hint">Enter Tip</string>


    <string name="label_tip_percent">Tip (%)</string>
    <string name="label_tip">Tip($)</string>
    <string name="label_total">Total</string>
    <string name="label_Bill">Bill</string>
    <string name="button_calculate">Calculate</string>


</resources>